# GuinMotion

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/vcpkg-ports/mujoco/: fix-ipo-cache-check.patch  portfile.cmake
cmake/vcpkg-triplets/: x64-linux.cmake
design/: README.md  cross-platform-build.md  operator-plugin-design.md  system-architecture.md  technology-selection.md  visualization-and-data-model.md
examples/one_stop_validation/: CMakeLists.txt  README.md  one_stop_validation.cpp
examples/one_stop_validation/data/: demo_robot.urdf  scene.xyz  targets.xml
resources/python/: embed_smoke.py
script/: build_and_run.sh  ci_build.sh  env_common.sh  install_deps.sh  package.sh
src/app/: CMakeLists.txt  main.cpp  main_window.cpp
src/app/include/guinmotion/app/: main_window.hpp
src/app_core/: CMakeLists.txt
src/app_core/include/guinmotion/app_core/: project_service.hpp
src/app_core/src/: project_service.cpp
src/core/: CMakeLists.txt
src/core/include/guinmotion/core/: project.hpp  types.hpp
src/core/include/guinmotion/core/io/: import_result.hpp  point_cloud_file.hpp  robot_model_urdf.hpp  target_points_xml.hpp  trajectory_xml.hpp
src/core/src/: project.cpp
src/core/src/io/: point_cloud_file.cpp  robot_model_urdf.cpp  target_points_xml.cpp  trajectory_xml.cpp  xml_util.hpp
src/operator_runtime/: CMakeLists.txt
src/operator_runtime/include/guinmotion/operator_runtime/: dynamic_plugin_host.hpp  operator_registry.hpp  plugin_api.h
src/operator_runtime/src/: dynamic_plugin_host.cpp  operator_registry.cpp
src/plugins/examples/minimal_operator/: CMakeLists.txt  minimal_operator.cpp  plugin.json
src/python_embed/: CMakeLists.txt
src/python_embed/include/guinmotion/python_embed/: embed_smoke.hpp
src/python_embed/src/: embed_smoke.cpp
src/sdk/: CMakeLists.txt
src/sdk/include/guinmotion/sdk/: builtin_operators.hpp  operator.hpp
src/sdk/src/: builtin_operators.cpp
src/simulation/: CMakeLists.txt
src/simulation/include/guinmotion/simulation/: mujoco_simulation.hpp  trajectory_evaluator.hpp
src/simulation/src/: mujoco_simulation.cpp  trajectory_evaluator.cpp
src/viewport/: CMakeLists.txt
src/viewport/include/guinmotion/viewport/: joint_placeholder.hpp  viewport_widget.hpp
src/viewport/src/: viewport_widget.cpp
tests/: CMakeLists.txt  builtin_operator_test.cpp  io_import_test.cpp  simulation_evaluation_test.cpp  viewport_placeholder_test.cpp
